# flatten

./: README.md  cabal.project  flatten.cabal
bench/: Main.hs
src/: Flat.hs
test/: Spec.hs
