cabal-version:   2.4
name:            flatten
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          AUTHNAME
maintainer:      AUTHNAME <EMAIL>
copyright:       CURRENTYEAR AUTHNAME
tested-with:     GHC ==8.6.5 || ==8.8.3 || ==8.10.7 || ==9.0.2 || ==9.2.2
extra-doc-files:
  CHANGELOG.md
  README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/PKGNAME#readme
-- source-repository head
--   type:     git
--   location: git://github.com/FIXME/PKGNAME.git

common common-options
  build-depends:    base >=4.9 && <5
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields
    -fllvm -O2
library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: Lib, Flat
  build-depends:
    , containers
    , mtl
    , text
    , bytestring 
    , recursion-schemes
    , vector
    , derive-storable
    , deepseq
    , data-fix

executable flatten-exe
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  flatten
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite flatten-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , tasty
    , tasty-bench
    , tasty-hunit
    , tasty-hedgehog
    , flatten

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

benchmark flatten-bench
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  ghc-options: 
    -fproc-alignment=64 
    -with-rtsopts=-A32m
    -fllvm -O2
  build-depends:
    , tasty
    , tasty-bench
    , deepseq
    , flatten

